# silk

./: .example.env  .gitignore  Cargo.toml  README.md  notations.md
migrations/: 20250603154055_subscriptions.sql  20250615133044_feed.sql
src/: config.rs  lib.rs  main.rs  terminal.rs  types.rs  youtube.rs
src/tui/: tui.rs
src/tui/app/: model.rs
src/tui/components/: input.rs  label.rs  menu.rs  mod.rs
src/ui/: main_menu.rs  mod.rs  search.rs  videos.rs
src/youtube/: download.rs  mod.rs  parser.rs  play_video.rs  scraper.rs  search_fetch.rs
