[package]
name = "silk"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"]}
urlencoding = "2.1.3"
rustube = "0.6.0"
regex = "1.11.1"
reqwest = "0.12.15"
clap = { version = "4.5.38", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"]}
dotenvy = "0.15.7"
chrono = "0.4.41"

